manifests/gateway-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-api
  namespace: tacos-app
  labels:
    app: gateway-api
    tier: gateway
spec:
  type: NodePort
  selector:
    app: gateway-api
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    nodePort: 30000
    protocol: TCP
  - name: grpc
    port: 8001
    targetPort: 8001
    nodePort: 30001
    protocol: TCP
