manifests/gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-api-route
  namespace: tacos-app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.traffictacos.store
spec:
  parentRefs:
  - name: api-traffictacos-gateway
    namespace: gateway
  hostnames:
  - api.traffictacos.store
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gateway-api
      port: 8000
      weight: 100
